feat: added photo of brian quach

--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -40,8 +40,8 @@ footer {
   margin: 0 0 3px 0;
 }
 
-.portfolio-about {
-  text-align: center;
+.portfolio-self-photo {
+  margin: 0 auto;
 }
 
 .featured-headline {
