--- a/portfolio/css/main.css
+++ b/portfolio/css/main.css
@@ -58,6 +58,14 @@ footer {
   margin: 5px;
 }
 
+.modal-thumbnail {
+  margin: 0 auto;
+}
+
+.modal-description {
+  text-align: left;
+}
+
 @media screen and (min-width: 768px) {
   header {
     text-align: right;
